// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart calcs basic 1`] = `
Object {
  "axis": Array [
    Array [
      1,
      2,
    ],
    Array [
      2,
      0.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      2,
    ],
    Array [
      0.8,
      2,
    ],
  ],
  "dimensions": Array [
    1,
    1.2,
  ],
  "pad": "large",
  "thickness": "xlarge",
}
`;

exports[`Chart calcs hair thickness 1`] = `
Object {
  "axis": Array [
    Array [],
    Array [
      3,
      1.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      1,
    ],
    Array [
      1.8,
      3.0000000000000004,
    ],
  ],
  "dimensions": Array [
    0,
    1.2,
  ],
  "pad": undefined,
  "thickness": "hair",
}
`;

exports[`Chart calcs large thickness 1`] = `
Object {
  "axis": Array [
    Array [],
    Array [
      3,
      1.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      1,
    ],
    Array [
      1.8,
      3.0000000000000004,
    ],
  ],
  "dimensions": Array [
    0,
    1.2,
  ],
  "pad": "medium",
  "thickness": "large",
}
`;

exports[`Chart calcs medium thickness 1`] = `
Object {
  "axis": Array [
    Array [],
    Array [
      3,
      1.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      1,
    ],
    Array [
      1.8,
      3.0000000000000004,
    ],
  ],
  "dimensions": Array [
    0,
    1.2,
  ],
  "pad": "small",
  "thickness": "medium",
}
`;

exports[`Chart calcs small thickness 1`] = `
Object {
  "axis": Array [
    Array [],
    Array [
      3,
      1.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      1,
    ],
    Array [
      1.8,
      3.0000000000000004,
    ],
  ],
  "dimensions": Array [
    0,
    1.2,
  ],
  "pad": "xsmall",
  "thickness": "small",
}
`;

exports[`Chart calcs with negative min 1`] = `
Object {
  "axis": Array [
    Array [
      1,
      2,
    ],
    Array [],
  ],
  "bounds": Array [
    Array [
      1,
      2,
    ],
    Array [
      -Infinity,
      NaN,
    ],
  ],
  "dimensions": Array [
    1,
    NaN,
  ],
  "pad": "large",
  "thickness": "xlarge",
}
`;

exports[`Chart calcs with single value 1`] = `
Object {
  "axis": Array [
    Array [
      0,
      1,
    ],
    Array [
      1,
      0,
    ],
  ],
  "bounds": Array [
    Array [
      0,
      1,
    ],
    Array [
      0,
      1,
    ],
  ],
  "dimensions": Array [
    1,
    1,
  ],
  "pad": "large",
  "thickness": "xlarge",
}
`;

exports[`Chart calcs xsmall thickness 1`] = `
Object {
  "axis": Array [
    Array [],
    Array [
      3,
      1.8,
    ],
  ],
  "bounds": Array [
    Array [
      1,
      1,
    ],
    Array [
      1.8,
      3.0000000000000004,
    ],
  ],
  "dimensions": Array [
    0,
    1.2,
  ],
  "pad": "xxsmall",
  "thickness": "xsmall",
}
`;

exports[`Chart cap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M 384,0 L 0,192"
        />
        
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g>
        <path
          d="M 0,192 L 384,0 L 384,192 L 0,192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="round"
      strokeLinejoin="round"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <circle
          cx={384}
          cy={0}
          r={12}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <circle
          cx={0}
          cy={192}
          r={12}
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#7D4CDB"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      opacity={0.8}
      stroke="#7D4CDB"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <defs>
      <linearGradient
        id="border-brand-undefined-gradient"
        x1={0}
        x2={0}
        y1={0}
        y2={1}
      >
        <stop
          offset={0}
          stopColor="rgba(0,0,0,0.33)"
        />
        <stop
          offset={1}
          stopColor="#7D4CDB"
        />
      </linearGradient>
      <mask
        id="border-brand-undefined-mask"
      >
        <g
          fill="none"
          stroke="#ffffff"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={24}
        >
          <g
            fill="none"
          >
            <title>
              sixty
            </title>
            <path
              d="M 384,192 L 384,0"
            />
          </g>
          <g
            fill="none"
          >
            <title>
              zero
            </title>
            <path
              d="M 0,192 L 0,192"
            />
          </g>
        </g>
      </mask>
    </defs>
    <rect
      fill="url(#border-brand-undefined-gradient)"
      height={216}
      mask="url(#border-brand-undefined-mask)"
      width={408}
      x={-12}
      y={-12}
    />
  </svg>
</div>
`;

exports[`Chart dash 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
          strokeDasharray="48 12"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
          strokeDasharray="48 12"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart gap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 768px;
}

.c2 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 84 216"
      width={60}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 60,192 L 60,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 96 216"
      width={72}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 72,192 L 72,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 120 216"
      width={96}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 96,192 L 96,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 378,186 L 378,6"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 6,186 L 6,186"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 360,180 L 360,12"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 24,180 L 24,180"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart point 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <circle
          cx={384}
          cy={0}
          r={12}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <circle
          cx={0}
          cy={192}
          r={12}
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384 -12 L 396 0 L 384 12 L 372 0 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0 180 L 12 192 L 0 204 L -12 192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 372 -12 L 396 -12 L 396 12 L 372 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M -12 180 L 12 180 L 12 204 L -12 204 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384 -12 L 376 12 L 396 -4 L 372 -4 L 392 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0 180 L -8 204 L 12 188 L -12 188 L 8 204 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384 -12 L 396 12 L 372 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0 180 L 12 204 L -12 204 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 372 -12 L 396 -12 L 384 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M -12 180 L 12 180 L 0 204 Z"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart should not have accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="192"
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width="384"
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-linejoin="miter"
      stroke-width="24"
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 768px;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={96}
    preserveAspectRatio="none"
    viewBox="-12 -12 120 120"
    width={96}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 96,96 L 96,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,96 L 0,96"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 216 216"
    width={192}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 192,192 L 192,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={384}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 408"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,384 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,384 L 0,384"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={768}
    preserveAspectRatio="none"
    viewBox="-12 -12 792 792"
    width={768}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 768,768 L 768,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,768 L 0,768"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={1152}
    preserveAspectRatio="none"
    viewBox="-12 -12 1176 1176"
    width={1152}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 1152,1152 L 1152,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,1152 L 0,1152"
        />
      </g>
    </g>
  </svg>
  <div
    className="c2"
  >
    <svg
      className="c1"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 24 216"
      width={0}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 0,192 L 0,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c1"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 24 216"
      width={0}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 0,192 L 0,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c1"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 96 216"
      width={72}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 72,192 L 72,0"
          />
        </g>
        <g
          fill="none"
        >
          <title>
            zero
          </title>
          <path
            d="M 0,192 L 0,192"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart thickness 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-3 -3 390 198"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={6}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-6 -6 396 204"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={12}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-24 -24 432 240"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={48}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-48 -48 480 288"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={96}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart type 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M 384,0 L 0,192"
        />
        
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g>
        <path
          d="M 0,192 L 384,0 L 384,192 L 0,192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 372 -12 L 396 -12 L 396 12 L 372 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M -12 180 L 12 180 L 12 204 L -12 204 Z"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart undefined values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M 384,0 L 0,192"
        />
        
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g>
        <path
          d="M 0,192 L 384,0 L 384,192 L 0,192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 372 -12 L 396 -12 L 396 12 L 372 12 Z"
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <path
          d="M -12 180 L 12 180 L 12 204 L -12 204 Z"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart value style 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        fill="#00C781"
        opacity={0.8}
        stroke="none"
      >
        <title>
          sixty
        </title>
        <circle
          cx={384}
          cy={0}
          r={6}
        />
      </g>
      <g
        fill="#123456"
        opacity={0.27}
        stroke="none"
      >
        <title>
          zero
        </title>
        <circle
          cx={0}
          cy={192}
          r={13.5}
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
        opacity={0.8}
        stroke="#00C781"
        strokeWidth={12}
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
      <g
        fill="none"
        opacity={0.27}
        stroke="#123456"
        strokeWidth={27}
      >
        <title>
          zero
        </title>
        <path
          d="M 0,192 L 0,192"
        />
      </g>
    </g>
  </svg>
</div>
`;
